[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[vars]
WORKERS_RS_VERSION = "0.0.18"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.18"
serde_json = "1.0.111"
rand = "0.8.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = {  version =  "0.2.12", features = ["js"] }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
